# gnote

./: LICENSE
sublime/: README.md
sublime/gnote/: gnote.sublime-syntax  syntax_test_gnote.gn
